Bugs fixes from user demo on physical phone > Samsung Galaxy S9 - added scroll in settings - fixed padding in vertices - disabled landscape mode - included stars layout in help screen for consistency

--- a/app/src/main/res/layout/dialog_help.xml
+++ b/app/src/main/res/layout/dialog_help.xml
@@ -8,6 +8,14 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent">
 
+    <include layout="@layout/stars"/>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/finalDarkBg_50"/>
+
+
     <ImageView
         android:id="@+id/close_corner"
         android:layout_width="60dp"
@@ -50,7 +58,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:paddingTop="24dp"
-            android:paddingBottom="24dp"
             android:text="How to Play"
             android:textSize="30sp" />
 
