--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,86 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="200dp"
+    android:height="200dp"
+    android:viewportWidth="200"
+    android:viewportHeight="200">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
+        android:pathData="M60,46L60.22,54.324C60.22,63.687 63.266,63.501 66.895,63.687L73,64L66.895,64.313C63.266,64.499 60.22,64.313 60.22,73.676L60,82L59.78,73.676C59.78,64.313 56.734,64.499 53.105,64.313L47,64L53.105,63.687C56.734,63.501 59.78,63.687 59.78,54.324L60,46Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M60,121L60.22,129.324C60.22,138.687 63.266,138.501 66.895,138.687L73,139L66.895,139.313C63.266,139.499 60.22,139.313 60.22,148.676L60,157L59.78,148.676C59.78,139.313 56.734,139.499 53.105,139.313L47,139L53.105,138.687C56.734,138.501 59.78,138.687 59.78,129.324L60,121Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M138,121L138.22,129.324C138.22,138.687 141.266,138.501 144.895,138.687L151,139L144.895,139.313C141.266,139.499 138.22,139.313 138.22,148.676L138,157L137.78,148.676C137.78,139.313 134.734,139.499 131.105,139.313L125,139L131.105,138.687C134.734,138.501 137.78,138.687 137.78,129.324L138,121Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M139,46L139.22,54.324C139.22,63.687 142.266,63.501 145.895,63.687L152,64L145.895,64.313C142.266,64.499 139.22,64.313 139.22,73.676L139,82L138.78,73.676C138.78,64.313 135.734,64.499 132.105,64.313L126,64L132.105,63.687C135.734,63.501 138.78,63.687 138.78,54.324L139,46Z"
+        android:fillColor="#ffffff"/>
+    <path
         android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M62,64.5L138,64.5"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M60.5,65L60.5,141"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"/>
+    <path
+        android:pathData="M102.5,35L102.61,39.162C102.61,43.843 104.133,43.75 105.948,43.843L109,44L105.948,44.157C104.133,44.25 102.61,44.157 102.61,48.838L102.5,53L102.39,48.838C102.39,44.157 100.867,44.25 99.052,44.157L96,44L99.052,43.843C100.867,43.75 102.39,43.843 102.39,39.162L102.5,35Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M48.5,92L48.61,96.393C48.61,101.335 50.133,101.237 51.948,101.335L55,101.5L51.948,101.665C50.133,101.763 48.61,101.665 48.61,106.607L48.5,111L48.39,106.607C48.39,101.665 46.867,101.763 45.052,101.665L42,101.5L45.052,101.335C46.867,101.237 48.39,101.335 48.39,96.393L48.5,92Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M105.5,148L105.61,152.393C105.61,157.335 107.133,157.237 108.948,157.335L112,157.5L108.948,157.665C107.133,157.763 105.61,157.665 105.61,162.607L105.5,167L105.39,162.607C105.39,157.665 103.867,157.763 102.052,157.665L99,157.5L102.052,157.335C103.867,157.237 105.39,157.335 105.39,152.393L105.5,148Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M151.5,92L151.61,96.393C151.61,101.335 153.133,101.237 154.948,101.335L158,101.5L154.948,101.665C153.133,101.763 151.61,101.665 151.61,106.607L151.5,111L151.39,106.607C151.39,101.665 149.867,101.763 148.052,101.665L145,101.5L148.052,101.335C149.867,101.237 151.39,101.335 151.39,96.393L151.5,92Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M78.794,100.711m-6.124,0a6.124,6.124 0,1 1,12.247 0a6.124,6.124 0,1 1,-12.247 0"
+        android:fillColor="#BBDEFF"/>
+    <path
+        android:pathData="M121.206,100.711m-6.124,0a6.124,6.124 0,1 1,12.247 0a6.124,6.124 0,1 1,-12.247 0"
+        android:fillColor="#BBDEFF"/>
+    <path
+        android:pathData="M100,77.124L100,77.124A21.206,21.206 0,0 1,121.206 98.33L121.206,110.351A21.206,21.206 0,0 1,100 131.557L100,131.557A21.206,21.206 0,0 1,78.794 110.351L78.794,98.33A21.206,21.206 0,0 1,100 77.124z"
+        android:fillColor="#BBDEFF"/>
+    <path
+        android:pathData="M98.525,85.516L101.474,85.516A18.371,18.371 0,0 1,119.845 103.887L119.845,103.887A18.371,18.371 0,0 1,101.474 122.258L98.525,122.258A18.371,18.371 0,0 1,80.154 103.887L80.154,103.887A18.371,18.371 0,0 1,98.525 85.516z"
+        android:fillColor="#EBD3BE"/>
+    <path
+        android:pathData="M119.845,108.423m-4.309,0a4.309,4.309 0,1 1,8.619 0a4.309,4.309 0,1 1,-8.619 0"
+        android:fillColor="#EBD3BE"/>
+    <path
+        android:pathData="M80.155,108.423m-4.309,0a4.309,4.309 0,1 1,8.619 0a4.309,4.309 0,1 1,-8.619 0"
+        android:fillColor="#EBD3BE"/>
+    <path
+        android:pathData="M90.134,105.474m-1.361,0a1.361,1.361 0,1 1,2.722 0a1.361,1.361 0,1 1,-2.722 0"
+        android:fillColor="#000000"/>
+    <path
+        android:pathData="M110.093,105.474m-1.361,0a1.361,1.361 0,1 1,2.722 0a1.361,1.361 0,1 1,-2.722 0"
+        android:fillColor="#000000"/>
+    <path
+        android:pathData="M107.144,108.423C107.144,110.167 106.451,111.84 105.218,113.074C103.984,114.307 102.311,115 100.567,115C98.823,115 97.15,114.307 95.916,113.074C94.683,111.84 93.99,110.167 93.99,108.423L100.567,108.423H107.144Z"
+        android:fillColor="#CD8A8A"/>
+    <path
+        android:pathData="M85.371,109.217a2.381,0.794 0,1 0,4.763 0a2.381,0.794 0,1 0,-4.763 0z"
+        android:fillColor="#FBBFBF"/>
+    <path
+        android:pathData="M111.227,109.217a2.381,0.794 0,1 0,4.763 0a2.381,0.794 0,1 0,-4.763 0z"
+        android:fillColor="#FBBFBF"/>
+    <path
+        android:pathData="M79.293,89.155C70.731,89.155 83.463,100.258 97.982,100.258C108.303,100.258 116.67,96.861 116.67,93.211C116.67,87.026 107.884,83.021 97.982,83.021C89.792,83.021 86.739,89.155 79.293,89.155Z"
+        android:fillColor="#BBDEFF"/>
+    <path
+        android:pathData="M100,104m-32,0a32,32 0,1 1,64 0a32,32 0,1 1,-64 0"
+        android:strokeWidth="2"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"/>
+    <path
+        android:pathData="M104.196,79.918C109.593,80.695 112.031,82.209 115.601,86.338"
+        android:strokeWidth="5"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"/>
 </vector>
