--- a/app/src/main/res/layout/stars.xml
+++ b/app/src/main/res/layout/stars.xml
@@ -261,6 +261,46 @@
         android:layout_marginTop="250dp"
         android:src="@drawable/ic_vector_star" />
 
+    <ImageView
+        android:id="@+id/star31"
+        android:layout_width="12dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="670dp"
+        android:src="@drawable/ic_vector_star" />
+
+    <ImageView
+        android:id="@+id/star32"
+        android:layout_width="24dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="420dp"
+        android:src="@drawable/ic_vector_star" />
+
+    <ImageView
+        android:id="@+id/star33"
+        android:layout_width="18dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="470dp"
+        android:src="@drawable/ic_vector_star" />
+
+    <ImageView
+        android:id="@+id/star34"
+        android:layout_width="12dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="350dp"
+        android:src="@drawable/ic_vector_star" />
+
+    <ImageView
+        android:id="@+id/star35"
+        android:layout_width="24dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="390dp"
+        android:layout_marginTop="700dp"
+        android:src="@drawable/ic_vector_star" />
+
     <!--        <ImageView-->
     <!--            android:id="@+id/star1"-->
     <!--            android:layout_width="24dp"-->
