--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -45,7 +45,7 @@
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="20dp"
+                        android:layout_margin="10dp"
                         android:orientation="vertical">
 
                         <com.google.android.material.card.MaterialCardView
@@ -99,7 +99,7 @@
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="20dp"
+                        android:layout_margin="10dp"
                         android:orientation="vertical">
 
                         <com.google.android.material.card.MaterialCardView
@@ -161,10 +161,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:layout_marginRight="25dp"
-                    android:layout_marginBottom="25dp"
+                    android:layout_marginBottom="10dp"
                     android:background="@drawable/settings_btn_bg"
                     android:gravity="center_horizontal"
-                    android:padding="15dp">
+                    android:padding="10dp">
 
                     <RadioGroup
                         android:id="@+id/radioGrid"
@@ -184,8 +184,9 @@
                             android:buttonTint="@color/white"
                             android:contentDescription="@string/btn_size_four"
                             android:gravity="center"
-                            android:text="4 x 4"
-                            android:textColor="@color/white" />
+                            android:text="@string/_4_x_4"
+                            android:textColor="@color/white"
+                            android:textSize="20dp" />
 
                         <RadioButton
                             android:id="@+id/rbGrid5"
@@ -198,8 +199,9 @@
                             android:buttonTint="@color/white"
                             android:contentDescription="@string/btn_size_five"
                             android:gravity="center"
-                            android:text="5 x 5"
-                            android:textColor="@color/white" />
+                            android:text="@string/_5_x_5"
+                            android:textColor="@color/white"
+                            android:textSize="20dp" />
 
                         <RadioButton
                             android:id="@+id/rbGrid6"
@@ -212,8 +214,9 @@
                             android:buttonTint="@color/white"
                             android:contentDescription="@string/btn_size_six"
                             android:gravity="center"
-                            android:text="6 x 6"
-                            android:textColor="@color/white" />
+                            android:text="@string/_6_x_6"
+                            android:textColor="@color/white"
+                            android:textSize="20dp" />
                     </RadioGroup>
 
                 </LinearLayout>
@@ -237,7 +240,7 @@
                     android:background="@drawable/settings_btn_bg"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
-                    android:padding="15dp">
+                    android:padding="10dp">
 
                     <RadioGroup
                         android:id="@+id/radioVerticesA"
@@ -334,6 +337,16 @@
                     </RadioGroup>
 
                 </LinearLayout>
+
+                <Button
+                    android:id="@+id/btnReturnToGame"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:backgroundTint="@color/primaryBtn"
+                    android:text="return to game"
+                    android:layout_marginStart="35dp"
+                    android:layout_marginEnd="35dp"
+                    android:textSize="20sp" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
