--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -46,10 +46,12 @@
                 tools:layout_editor_absoluteX="38dp"
                 tools:layout_editor_absoluteY="129dp">
 
-                <androidx.cardview.widget.CardView
+                <com.google.android.material.card.MaterialCardView
                     android:id="@+id/cvP1"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
+                    android:clickable="true"
+                    android:focusable="true"
                     app:cardCornerRadius="50dp"
                     tools:layout_editor_absoluteX="50dp"
                     tools:layout_editor_absoluteY="32dp">
@@ -59,15 +61,24 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center" />
-                </androidx.cardview.widget.CardView>
+                </com.google.android.material.card.MaterialCardView>
 
-                <TextView
-                    android:id="@+id/tvP1Name"
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/etP1Name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="TextView"
+                    android:contentDescription="@string/player_1"
+                    android:layout_marginTop="-8dp"
                     android:textSize="16sp"
+                    android:ems="4"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPersonName"
+                    android:maxLength="8"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:singleLine="true"
+                    android:text="Player 1"
+                    android:textAlignment="center"
                     tools:layout_editor_absoluteX="76dp"
                     tools:layout_editor_absoluteY="129dp" />
 
@@ -79,7 +90,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.199"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvP1Name" />
+                    app:layout_constraintTop_toBottomOf="@+id/etP1Name" />
             </LinearLayout>
 
             <TextView
@@ -122,10 +133,12 @@
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
-                <androidx.cardview.widget.CardView
+                <com.google.android.material.card.MaterialCardView
                     android:id="@+id/cvP2"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
+                    android:clickable="true"
+                    android:focusable="true"
                     app:cardCornerRadius="50dp"
                     tools:layout_editor_absoluteX="302dp"
                     tools:layout_editor_absoluteY="24dp">
@@ -135,15 +148,21 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center" />
-                </androidx.cardview.widget.CardView>
+                </com.google.android.material.card.MaterialCardView>
 
-                <TextView
-                    android:id="@+id/tvP2Name"
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/etP2Name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="TextView2"
+                    android:layout_marginTop="-8dp"
                     android:textSize="16sp"
+                    android:ems="4"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPersonName"
+                    android:maxLength="8"
+                    android:singleLine="true"
+                    android:text="Player 2"
+                    android:textAlignment="center"
                     tools:layout_editor_absoluteX="270dp"
                     tools:layout_editor_absoluteY="129dp" />
 
