--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -63,22 +63,13 @@
                         android:layout_gravity="center" />
                 </com.google.android.material.card.MaterialCardView>
 
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/etP1Name"
+                <TextView
+                    android:id="@+id/tvP1Name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:contentDescription="@string/player_1"
-                    android:layout_marginTop="-8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="TextView"
                     android:textSize="16sp"
-                    android:ems="4"
-                    android:imeOptions="actionDone"
-                    android:inputType="textPersonName"
-                    android:maxLength="8"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:singleLine="true"
-                    android:text="Player 1"
-                    android:textAlignment="center"
                     tools:layout_editor_absoluteX="76dp"
                     tools:layout_editor_absoluteY="129dp" />
 
@@ -90,7 +81,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.199"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etP1Name" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvP1Name" />
             </LinearLayout>
 
             <TextView
@@ -137,7 +128,6 @@
                     android:id="@+id/cvP2"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:clickable="true"
                     android:focusable="true"
                     app:cardCornerRadius="50dp"
                     tools:layout_editor_absoluteX="302dp"
@@ -150,19 +140,13 @@
                         android:layout_gravity="center" />
                 </com.google.android.material.card.MaterialCardView>
 
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/etP2Name"
+                <TextView
+                    android:id="@+id/tvP2Name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="-8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="TextView2"
                     android:textSize="16sp"
-                    android:ems="4"
-                    android:imeOptions="actionDone"
-                    android:inputType="textPersonName"
-                    android:maxLength="8"
-                    android:singleLine="true"
-                    android:text="Player 2"
-                    android:textAlignment="center"
                     tools:layout_editor_absoluteX="270dp"
                     tools:layout_editor_absoluteY="129dp" />
 
@@ -202,6 +186,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivWinner"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:text="TextView"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/gameView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
         <!--        <Button-->
         <!--            android:id="@+id/btnResetGame"-->
