--- a/app/src/main/res/layout/dialog_help.xml
+++ b/app/src/main/res/layout/dialog_help.xml
@@ -9,11 +9,146 @@
 
     <include layout="@layout/stars"/>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/finalDarkBg_50"/>
+        android:orientation="vertical"
+        android:paddingTop="12dp"
+        android:background="@color/finalDarkBg_50"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24000001">
 
+
+        <TextView
+            android:id="@+id/tvHowTo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="24dp"
+            android:text="How to Play"
+            android:textSize="28sp" />
+
+        <TextView
+            android:id="@+id/tvRules"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:paddingLeft="24dp"
+            android:paddingTop="24dp"
+            android:text="Rules:"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingVertical="10dp">
+            <TextView
+                android:id="@+id/tvRuleOne"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:paddingHorizontal="24dp"
+                android:text="1."
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tvRuleOneDesc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="24dp"
+                android:gravity="left"
+                android:text="@string/rules_1"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingVertical="10dp">
+            <TextView
+                android:id="@+id/tvRuleTwo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:paddingHorizontal="24dp"
+                android:text="2."
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tvRuleTwoDesc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="24dp"
+                android:gravity="left"
+                android:text="@string/rules_2"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+
+
+        <ImageView
+            android:id="@+id/ivHelpBoxes"
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="5dp"
+            android:src="@drawable/ic_help_boxes" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingVertical="10dp">
+            <TextView
+                android:id="@+id/tvRuleThree"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:paddingHorizontal="24dp"
+                android:text="3."
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tvRuleThreeDesc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="24dp"
+                android:gravity="left"
+                android:text="@string/rules_3"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvGoal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:gravity="left"
+            android:paddingStart="24dp"
+            android:paddingTop="30dp"
+            android:paddingEnd="24dp"
+            android:text="Goal:"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/tvGoalText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingVertical="10dp"
+            android:gravity="start"
+            android:paddingHorizontal="24dp"
+            android:text="@string/help_goal"
+            android:textSize="18sp" />
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/close_corner"
@@ -38,110 +173,5 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.24000001">
-
-
-        <TextView
-            android:id="@+id/tvHowTo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:paddingTop="24dp"
-            android:text="How to Play"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/tvRules"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:paddingLeft="24dp"
-            android:paddingTop="24dp"
-            android:paddingBottom="30dp"
-            android:text="Rules:"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/tvRuleOne"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:gravity="left"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:paddingBottom="15dp"
-            android:text="@string/rules_1"
-            android:textSize="20dp" />
-
-        <TextView
-            android:id="@+id/tvRuleTwo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:gravity="left"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:paddingBottom="15dp"
-            android:text="@string/rules_2"
-            android:textSize="20dp" />
-
-        <ImageView
-            android:id="@+id/ivHelpBoxes"
-            android:layout_width="250dp"
-            android:layout_height="100dp"
-            android:layout_alignParentEnd="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginEnd="6dp"
-            android:layout_marginBottom="5dp"
-            android:src="@drawable/ic_help_boxes" />
-
-        <TextView
-            android:id="@+id/tvRuleThree"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:gravity="left"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:paddingBottom="10dp"
-            android:text="@string/rules_3"
-            android:textSize="20dp" />
-
-        <TextView
-            android:id="@+id/tvGoal"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="left"
-            android:gravity="left"
-            android:paddingStart="24dp"
-            android:paddingTop="30dp"
-            android:paddingEnd="24dp"
-            android:paddingBottom="30dp"
-            android:text="Goal:"
-            android:textSize="25dp" />
-
-        <TextView
-            android:id="@+id/tvGoalText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="left"
-            android:gravity="left"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:text="@string/help_goal"
-            android:textSize="20dp" />
-
-    </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
 
