--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -46,7 +46,8 @@
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_marginVertical="12dp"
+                        android:layout_marginHorizontal="32dp"
                         android:orientation="vertical">
 
                         <com.google.android.material.card.MaterialCardView
@@ -76,18 +77,15 @@
                                 android:layout_marginBottom="5dp" />
                         </com.google.android.material.card.MaterialCardView>
 
-                        <EditText
-                            android:id="@+id/etP1"
+                        <TextView
+                            android:id="@+id/tvP1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:contentDescription="@string/player_1"
-                            android:ems="4"
-                            android:imeOptions="actionDone"
-                            android:inputType="textPersonName"
                             android:maxLength="8"
                             android:padding="12dp"
-                            android:singleLine="true"
+                            android:textSize="18sp"
                             android:text="Player 1"
                             android:textAlignment="center" />
 
@@ -96,7 +94,8 @@
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_marginVertical="12dp"
+                        android:layout_marginHorizontal="32dp"
                         android:orientation="vertical">
 
                         <com.google.android.material.card.MaterialCardView
@@ -126,17 +125,15 @@
                                 android:layout_marginBottom="5dp" />
                         </com.google.android.material.card.MaterialCardView>
 
-                        <EditText
-                            android:id="@+id/etP2"
+                        <TextView
+                            android:id="@+id/tvP2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:contentDescription="@string/player_2"
-                            android:ems="4"
-                            android:imeOptions="actionDone"
-                            android:inputType="textPersonName"
                             android:maxLength="8"
                             android:padding="12dp"
+                            android:textSize="18sp"
                             android:singleLine="true"
                             android:text="Player 2"
                             android:textAlignment="center" />
