--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="android:fontFamily">@font/abel</item>
         <item name="colorControlNormal">@color/white</item>
         <item name="android:editTextColor">@color/white</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
     <style name="Widget.App.ButtonStyle"
         parent="Widget.MaterialComponents.Button">
@@ -18,7 +19,6 @@
     <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:background">@color/finalDarkBg</item>
         <item name="android:textAlignment">center</item>
-
         <item name="android:textColorPrimary">@color/pinkPlayer</item>
     </style>
 
@@ -30,5 +30,7 @@
         <item name="android:windowMinWidthMajor">90%</item>
         <item name="android:windowMinWidthMinor">90%</item>
         <item name="android:windowIsFloating">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:navigationBarColor">@null</item>
     </style>
 </resources>
