allow user to click winner icon and pop more confetti

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -13,7 +13,6 @@
         android:layout_height="match_parent"
         android:background="@color/finalDarkBg_50">
 
-
         <View
             android:id="@+id/divider"
             android:layout_width="409dp"
@@ -191,8 +190,7 @@
         <nl.dionsegijn.konfetti.xml.KonfettiView
             android:id="@+id/konfettiView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="100dp"/>
+            android:layout_height="match_parent"/>
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivWinner"
@@ -202,6 +200,43 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+<!--        <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center_horizontal"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/gameView"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="1.0"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/linearLayout">-->
+
+<!--            <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--                android:layout_width="200dp"-->
+<!--                android:layout_height="200dp">-->
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/ivWinnerLeft"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:translationX="100dp"-->
+<!--                    android:background="@drawable/ic_a_bangs"/>-->
+<!--            </androidx.appcompat.widget.LinearLayoutCompat>-->
+
+<!--            <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--                android:layout_width="200dp"-->
+<!--                android:layout_height="200dp">-->
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/ivWinnerRight"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:translationX="-100dp"-->
+<!--                    android:background="@drawable/ic_a_neon"/>-->
+<!--            </androidx.appcompat.widget.LinearLayoutCompat>-->
+
+<!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
 
         <LinearLayout
             android:id="@+id/buttons"
